--- a/episodes.html
+++ b/episodes.html
@@ -7,22 +7,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">   
-    <link defer rel="stylesheet" href="/assets/css/style.css">
+    <link defer rel="stylesheet" href="./assets/css/style.css">
     <script defer src="https://kit.fontawesome.com/514913ae4d.js" crossorigin="anonymous"></script>
-    <script defer src="/assets/js/script.js"></script>
+    <script defer src="./assets/js/script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header>
             <nav class="nav-bar">
                 <h2><span class="rick">Rick</span> & <span class="morty">Morty</span>! </h2>
-                <img id="nav-logo" src="/assets/img/nav-logo.png" alt="Rick and Morty logo">
+                <img id="nav-logo" src="./assets/img/nav-logo.png" alt="Rick and Morty logo">
                 <button class="menu-toggle" id="menu-toggle">
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <ul class="menu-list" id="menu-list">
                     <li class="pags"><a href="index.html"><i class="fa-solid fa-person"></i> Characters</a></li>
-                    <li class="pags"><a href="episodes.html"><i class="fa-solid fa-book"></i> Episodes</a></li>
                     <li class="pags"><a href="location.html"><i class="fa-solid fa-location-dot"></i> Locations</a></li>
                 </ul>
             </nav>
